# proton-dose-simulator

./: .gitignore  CMakeLists.txt  README.md  analyze_unet2d.py  api.py  benchmark_unet.py  build_golden_set_manifest.py  build_vs.bat  dashboard.bat  diagnose_offset.py  evaluate.py  framework_config.json  generate_dataset.py  generate_dataset_2d.py  generate_phantom.py  generate_setup_errors.py  golden_set_2d.json  requirements.txt  train.py  visualize.py
frontend/src/: App.jsx  index.css
models/: best_loss_unet2d.pth  best_unet2d.pth
models/ft_bragg_v1/: best_unet2d.pth
src/: benchmark_framework.py  checkpoint_utils.py  data_loader.py  loss_functions.py  model.py  range_utils.py
src/mc_engine/: constants.h  density_map.cpp  density_map.h  export.cpp  export.h  geometry.cpp  geometry.h  main.cpp  physics.cpp  physics.h  transport.cpp  transport.h
